--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,20 @@
+--- 
 abstract: XML::RSS With A Liberal Parser
 author: Daisuke Maki <daisuke@endeworks.jp>, Tatsuhiko Miyagawa <miyagawa@bulknews.net>
 build_requires: 
   Test::More: 0
 distribution_type: module
-generated_by: Module::Install version 0.64
+generated_by: Module::Install version 0.65
 license: perl
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
 name: XML-RSS-Liberal
 no_index: 
   directory: 
     - inc
     - t
 requires: 
-  XML::LibXML: 0
   XML::Liberal: 0
-version: 0.02
+  XML::RSS::LibXML: 0.30
+version: 0.03
